Removed residual css files, fixed img spacing
Deleted lasagna.css and garlic-bread.css since the html pages both now use recipe-styles.css.
Also fixed a spacing issue between the image and description sections

--- a/css/recipe-styles.css
+++ b/css/recipe-styles.css
@@ -17,6 +17,7 @@ img {
     width: 400px;
     height: auto;
     margin: 0px;
+    display: block;
 }
 
 ul, ol, p {
